--- a/Web_Dev_Portfolio/styles/style.css
+++ b/Web_Dev_Portfolio/styles/style.css
@@ -11,6 +11,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 0 200px;
 }
 .nav_title {
   color: #181818;
@@ -39,4 +40,28 @@ nav button{
     font-weight: 700;
     border-radius: 8px;
     padding: 10px 20px;
+}
+.button{
+    
+        background-color: #fd6e0a;
+        color: rgb(219, 218, 236);
+        border: none;
+        font-size: 20px;
+        font-weight: 700;
+        border-radius: 8px;
+        padding: 10px 20px;
+    
+}
+
+/* header edited */
+.header{
+    background-color: #fff8f3;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .pic{
+  width: 500px;
 }
