--- a/Web_Dev_Portfolio/styles/style.css
+++ b/Web_Dev_Portfolio/styles/style.css
@@ -6,6 +6,18 @@ body {
 .text-primary {
   color: #fd6e0a;
 }
+.section-tittle {
+  color: #181818;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
+  
+}
+.section-description {
+  color: #757575;
+  text-align: center;
+  font-size: 18px;
+}
 /* nav style  */
 nav {
   display: flex;
@@ -21,47 +33,90 @@ nav {
 nav > ul {
   display: flex;
   align-items: center;
-  
-  
 }
 nav li {
   list-style: none;
   margin-right: 50px;
 }
-nav a{
-    text-decoration: none;
-    color: #474747;
+nav a {
+  text-decoration: none;
+  color: #474747;
 }
-nav button{
-    background-color: #fd6e0a;
-    color: rgb(219, 218, 236);
-    border: none;
-    font-size: 20px;
-    font-weight: 700;
-    border-radius: 8px;
-    padding: 10px 20px;
+nav button {
+  background-color: #fd6e0a;
+  color: rgb(219, 218, 236);
+  border: none;
+  font-size: 20px;
+  font-weight: 700;
+  border-radius: 8px;
+  padding: 10px 20px;
 }
-.button{
-    
-        background-color: #fd6e0a;
-        color: rgb(219, 218, 236);
-        border: none;
-        font-size: 20px;
-        font-weight: 700;
-        border-radius: 8px;
-        padding: 10px 20px;
-    
+.button {
+  background-color: #fd6e0a;
+  color: rgb(219, 218, 236);
+  border: none;
+  font-size: 20px;
+  font-weight: 700;
+  border-radius: 8px;
+  padding: 10px 20px;
 }
 
 /* header edited */
-.header{
-    background-color: #fff8f3;
+.header {
+  background-color: #fff8f3;
+  background-image: url(../imgs/images/header_bg.png);
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
-.banner{
-    padding: 30px 30px 30px 150px;
-    display: flex;
-    align-items: center;
+.banner {
+  padding: 30px 30px 0px 150px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.banner .pic{
+.banner_text {
+  max-width: 500px;
+}
+.banner .pic {
   width: 500px;
+}
+.banner_greeting {
+  font-size: 45px;
+  color: #474747;
+  margin-bottom: 0;
+}
+.banner_tittle {
+  font-size: 85px;
+  font-weight: 700;
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+/* main sectoin  */
+main{
+  max-width: 1140px;
+  margin: 0 auto;
+  flex-shrink: 0;
+}
+/* about section  */
+.about {
+  background-color: #fff8f3;
+  padding: 130px;
+  height: 550px;
+  margin-top: 130px 0;
+}
+.about-info-container{
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+}
+/*skill*/
+.skills-container{
+  display: flex;
+}
+.skill{
+  padding: 30px;
+  gap: 24px;
+}
+#What-I-do-description{
+  padding: 30px 150px;
 }
